test server 启动方式调整